update rol para gestion de documentacion de api
